Vcard with grid

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav>
+      <a href="aucun-menu"
+        ><img src="assets/burger-menu-removebg-preview.png" alt="Logo menu"
+      /></a>
+    </nav>
+
     <section class="info-section">
       <img
         class="my-logo"
